--- a/custom_components/lyric/manifest.json
+++ b/custom_components/lyric/manifest.json
@@ -1,12 +1,10 @@
 {
   "domain": "lyric",
   "name": "Honeywell Lyric",
-  "documentation": "https://github.com/bramkragten/lyric",
-  "requirements": [
-    "python-lyric==1.1.4"
-  ],
+  "documentation": "https://github.com/shellster/lyric",
   "dependencies": [],
+  "requirements": [],
   "codeowners": [
-    "@bramkragten"
+    "@shellster"
   ]
 }
